# SequentialTextReading

./: ArduinoDriver.cpp  ArduinoDriver.h  CMakeLists.txt  FingertipDetector.cpp  FingertipDetector.h  FliteTTSBridge.cpp  FliteTTSBridge.h  FliteTTSWorker.cpp  FliteTTSWorker.h  MathGLTools.h  OpenCVCameraThread.cpp  OpenCVCameraThread.h  QTSequentialTextReader.h  README.md  RecordVideo.cpp  RecordVideo.h  SeqentialTextReader.cpp  SeqentialTextReader.h  TesseractBridge.cpp  TesseractBridge.h  ViewerInterface.cpp  control.ui  filter.cpp  filter.h  main.cpp  ofxFFMPEGVideoWriter.cpp  ofxFFMPEGVideoWriter.h  std.cpp  std.h  viewcontroller.cpp  viewcontroller.h
QExtSerialPort-1.2rc/: qextserialenumerator.cpp  qextserialport.cpp
